📝 Added celltypist and pathway analyses

--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -24,7 +24,9 @@
     "Cell types classify cells based on public and private knowledge from studying transcription, morphology, function & other properties.\n",
     "Established cell types have well-characterized markers and properties; however, cell subtypes and states are continuously being discovered, refined and better understood.\n",
     "\n",
-    "In this notebook, we register the immune cell type vocabulary from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data."
+    "In this notebook, we register the immune cell type vocabulary from [CellTypist](https://www.celltypist.org), a computational tool used for cell type classification in scRNA-seq data.\n",
+    "\n",
+    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to annotate datasets analyzed with CellTypist enrichment analysis and track the dataset with LaminDB."
    ]
   },
   {
@@ -45,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin init --storage ./celltypist --schema bionty"
+    "!lamin init --storage ./use-cases-registries --schema bionty"
    ]
   },
   {
@@ -72,7 +74,6 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "import celltypist\n",
     "import pandas as pd\n",
     "\n",
     "lb.settings.organism = \"human\"  # globally set organism"
@@ -655,18 +656,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force celltypist\n",
-    "!rm -r ./celltypist"
+    "Move on to the next registry: [GO pathways](enrichr)"
    ]
   }
  ],
