--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -22,11 +22,9 @@
    "source": [
     "Pathways represent interconnected molecular networks of signaling cascades that govern critical cellular processes. They provide understandings  cellular behavior mechanisms, insights of disease progression and treatment responses. In an R&D organization, managing pathways across different datasets are crucial for gaining insights of potential therapeutic targets and intervention strategies.\n",
     "\n",
-    "In this notebook we manage a pathway registry based on \"2023 GO Biological Process\" ontology. We'll walk you through the following steps:\n",
+    "In this notebook we manage a pathway registry based on \"2023 GO Biological Process\" ontology. We'll walk you through the steps of registering pathways and link them to genes.\n",
     "\n",
-    "1. Register pathways and link them to genes. \n",
-    "2. Perform a pathway enrichment analysis on an interferon-beta treated dataset and track the dataset with LaminDB.\n",
-    "3. Demonstrate how datasets are queryable by pathways and genes using LaminDB."
+    "In the following [Standardize metadata on-the-fly](analysis-registries) notebook, we'll demonstrate how to perform a pathway enrichment analysis and track the dataset with LaminDB."
    ]
   },
   {
@@ -45,6 +43,8 @@
     "```{warning}\n",
     "\n",
     "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
+    "\n",
+    "This notebook follows the [CellTypist](celltypist), which populate the CellType registry.\n",
     "```"
    ]
   },
@@ -58,8 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "# A lamindb instance containing bionty schema (skip if you already loaded your own instance)\n",
-    "!lamin init --storage ./enrichr --schema bionty"
+    "!lamin load use-cases-registries"
    ]
   },
   {
@@ -70,10 +69,7 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "from lamin_usecases import datasets as ds\n",
     "import gseapy as gp\n",
-    "import scanpy as sc\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "lb.settings.organism = \"human\"  # globally set organism"
    ]
@@ -177,7 +173,7 @@
    },
    "outputs": [],
    "source": [
-    "pathway_bionty = lb.Pathway.bionty()  # equals to bionty.Pathway()"
+    "bionty = lb.Pathway.bionty()"
    ]
   },
   {
@@ -186,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_bionty"
+    "bionty"
    ]
   },
   {
@@ -351,470 +347,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A interferon-beta treated dataset"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will now conduct a pathway enrichment analysis on a small peripheral blood mononuclear cell dataset that is split into control and stimulated groups.\n",
-    "The stimulated group was treated with interferon beta."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's load the dataset and look at the cell type annotations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata = ds.anndata_seurat_ifnb()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.obs[\"seurat_annotations\"].value_counts()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For simplicity, we subset to \"B Activated\" cells:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_ba = adata[adata.obs.seurat_annotations == \"B Activated\"].copy()\n",
-    "adata_ba"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Pathway enrichment analysis using Enrichr"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This analysis is based on the [GSEApy scRNA-seq Example](https://gseapy.readthedocs.io/en/latest/singlecell_example.html)."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, we compute differentially expressed genes using a Wilcoxon test between stimulated and control cells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compute differentially expressed genes\n",
-    "sc.tl.rank_genes_groups(\n",
-    "    adata_ba,\n",
-    "    groupby=\"stim\",\n",
-    "    use_raw=False,\n",
-    "    method=\"wilcoxon\",\n",
-    "    groups=[\"STIM\"],\n",
-    "    reference=\"CTRL\",\n",
-    ")\n",
-    "\n",
-    "rank_genes_groups_df = sc.get.rank_genes_groups_df(adata_ba, \"STIM\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rank_genes_groups_df.head()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we filter out up/down-regulated differentially expressed gene sets:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "degs_up = rank_genes_groups_df[\n",
-    "    (rank_genes_groups_df[\"logfoldchanges\"] > 0)\n",
-    "    & (rank_genes_groups_df[\"pvals_adj\"] < 0.05)\n",
-    "]\n",
-    "degs_dw = rank_genes_groups_df[\n",
-    "    (rank_genes_groups_df[\"logfoldchanges\"] < 0)\n",
-    "    & (rank_genes_groups_df[\"pvals_adj\"] < 0.05)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "degs_up.shape, degs_dw.shape"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Run pathway enrichment analysis on DEGs and plot top 10 pathways:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enr_up = gp.enrichr(degs_up.names, gene_sets=\"GO_Biological_Process_2023\").res2d\n",
-    "\n",
-    "gp.dotplot(enr_up, figsize=(2, 3), title=\"Up\", cmap=plt.cm.autumn_r);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enr_dw = gp.enrichr(degs_dw.names, gene_sets=\"GO_Biological_Process_2023\").res2d\n",
-    "\n",
-    "gp.dotplot(enr_dw, figsize=(2, 3), title=\"Down\", cmap=plt.cm.winter_r, size=10);"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Track datasets containing annotated pathways in LaminDB"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's enable tracking of the current notebook as the transform of this file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We further create a File object to track the dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = ln.File.from_anndata(\n",
-    "    adata_ba, description=\"seurat_ifnb_activated_Bcells\", field=lb.Gene.symbol\n",
-    ")\n",
-    "file.save()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We further create two feature sets for `degs_up` and `degs_dw` which we can later associate with the associated pathways:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "degs_up_featureset = ln.FeatureSet.from_values(degs_up.names, lb.Gene.symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "degs_dw_featureset = ln.FeatureSet.from_values(degs_dw.names, lb.Gene.symbol)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link the top 10 pathways to the corresponding differentially expressed genes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get ontology ids for the top 10 pathways\n",
-    "enr_up_top10 = [\n",
-    "    pw_id[0] for pw_id in enr_up.head(10).Term.apply(parse_ontology_id_from_keys)\n",
-    "]\n",
-    "enr_dw_top10 = [\n",
-    "    pw_id[0] for pw_id in enr_dw.head(10).Term.apply(parse_ontology_id_from_keys)\n",
-    "]\n",
-    "\n",
-    "# get pathway records\n",
-    "enr_up_top10_pathways = lb.Pathway.from_values(enr_up_top10, lb.Pathway.ontology_id)\n",
-    "enr_dw_top10_pathways = lb.Pathway.from_values(enr_dw_top10, lb.Pathway.ontology_id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link feature sets to file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.features.add_feature_set(degs_up_featureset, slot=\"up-DEGs\")\n",
-    "file.features.add_feature_set(degs_dw_featureset, slot=\"down-DEGs\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Associate the pathways to the differentially expressed genes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "degs_up_featureset.pathways.set(enr_up_top10_pathways)\n",
-    "degs_dw_featureset.pathways.set(enr_dw_top10_pathways)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "degs_up_featureset.pathways.list(\"name\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Querying for pathways"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Querying for pathways is now simple with `.filter`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.Pathway.filter(name__contains=\"interferon-beta\").df()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query pathways from a gene:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.Pathway.filter(genes__symbol=\"KIR2DL1\").df()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query files from a pathway:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.File.filter(feature_sets__pathways__name__icontains=\"interferon-beta\").first()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query featuresets from a pathway to learn from which geneset this pathway was computed:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathway = lb.Pathway.filter(ontology_id=\"GO:0035456\").one()\n",
-    "pathway"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "degs = ln.FeatureSet.filter(pathways__ontology_id=pathway.ontology_id).one()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we can get the list of genes that are differentially expressed and belong to this pathway:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathway_genes = set(pathway.genes.list(\"symbol\"))\n",
-    "degs_genes = set(degs.genes.list(\"symbol\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathway_genes.intersection(degs_genes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force enrichr\n",
-    "!rm -r ./enrichr"
+    "Move on to the next analysis: [Standardize metadata on-the-fly](analysis-registries.ipynb)"
    ]
   }
  ],
