--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -6,9 +6,16 @@
    "source": [
     "# Standardize metadata on-the-fly\n",
     "\n",
-    "This notebook follows [CellTypist](celltypist.ipynb) and [GO Ontology](enrichr.ipynb), which populates the `CellType` and `Pathway` registries, respectively.\n",
+    "This use cases runs on a LaminDB instance with populated `CellType` and `Pathway` registries. Make sure you run [CellTypist](celltypist.ipynb) and [GO Ontology](enrichr.ipynb) notebooks before executing this use case.\n",
     "\n",
-    "Here, we demonstrate how to standardize the metadata on-the-fly during cell type annotation and pathway enrichment analysis using these two registries."
+    "Here, we demonstrate how to standardize the metadata on-the-fly during cell type annotation and pathway enrichment analysis using these two registries.\n",
+    "\n",
+    "For more information, see:\n",
+    "- [Access public ontologies](docs:public-ontologies)\n",
+    "- [Manage biological registries](docs:bio-registries)\n",
+    "- [Annotate data](docs:annotate)\n",
+    "- [Validate & standardize](docs:validate)\n",
+    "- [Validate & register scRNA-seq datasets](docs:scrna)"
    ]
   },
   {
@@ -58,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A interferon-beta treated dataset"
+    "## An interferon-beta treated dataset"
    ]
   },
   {
@@ -72,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load the dataset and look at the cell type annotations."
+    "Let's load the dataset and perform some preprocessing:"
    ]
   },
   {
@@ -81,23 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ds.anndata_seurat_ifnb(preprocess=False, populate_registries=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "adata = ds.anndata_seurat_ifnb(preprocess=False, populate_registries=True)\n",
     "adata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Analysis: cell type annotation using CellTypist"
    ]
   },
   {
@@ -112,6 +104,13 @@
     "sc.pp.pca(adata, n_comps=20)\n",
     "sc.pp.neighbors(adata, n_pcs=10)\n",
     "sc.tl.umap(adata)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis: cell type annotation using CellTypist"
    ]
   },
   {
@@ -274,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register new features and labels:"
+    "Register new features and labels (check out more details [here](docs:scrna)):"
    ]
   },
   {
@@ -287,6 +286,15 @@
     "ln.save(new_features)\n",
     "new_labels = [ln.ULabel(name=i) for i in adata.obs[\"stim\"].unique()]\n",
     "ln.save(new_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ln.Feature.lookup()"
    ]
   },
   {
@@ -321,17 +329,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.lookup()"
+    "cell_type_records = lb.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
+    "file.labels.add(cell_type_records, features.cell_type_celltypist)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cell_type_records = lb.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
-    "file.labels.add(cell_type_records, features.cell_type_celltypist)"
+    "Link stimulation labels:"
    ]
   },
   {
@@ -371,8 +377,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs_up_featureset = ln.FeatureSet.from_values(degs_up.names, lb.Gene.symbol)\n",
-    "degs_dw_featureset = ln.FeatureSet.from_values(degs_dw.names, lb.Gene.symbol)"
+    "degs_up_featureset = ln.FeatureSet.from_values(\n",
+    "    degs_up.names,\n",
+    "    lb.Gene.symbol,\n",
+    "    name=\"Up-regulated DEGs STIM vs CTRL\",\n",
+    "    type=\"category\",\n",
+    ")\n",
+    "degs_dw_featureset = ln.FeatureSet.from_values(\n",
+    "    degs_dw.names,\n",
+    "    lb.Gene.symbol,\n",
+    "    name=\"Down-regulated DEGs STIM vs CTRL\",\n",
+    "    type=\"category\",\n",
+    ")\n",
+    "\n",
+    "# Link feature sets to file\n",
+    "file.features.add_feature_set(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
+    "file.features.add_feature_set(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
    ]
   },
   {
@@ -388,50 +408,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_ontology_id_from_keys(key):\n",
+    "def parse_ontology_id_from_enrichr_results(key):\n",
     "    \"\"\"Parse out the ontology id.\n",
     "\n",
     "    \"ATF6-mediated Unfolded Protein Response (GO:0036500)\" -> (\"GO:0036500\", \"ATF6-mediated Unfolded Protein Response\")\n",
     "    \"\"\"\n",
     "    id = key.split(\" \")[-1].replace(\"(\", \"\").replace(\")\", \"\")\n",
     "    name = key.replace(f\" ({id})\", \"\")\n",
-    "    return (id, name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return (id, name)\n",
+    "\n",
+    "\n",
     "# get ontology ids for the top 10 pathways\n",
     "enr_up_top10 = [\n",
-    "    pw_id[0] for pw_id in enr_up.head(10).Term.apply(parse_ontology_id_from_keys)\n",
+    "    pw_id[0]\n",
+    "    for pw_id in enr_up.head(10).Term.apply(parse_ontology_id_from_enrichr_results)\n",
     "]\n",
     "enr_dw_top10 = [\n",
-    "    pw_id[0] for pw_id in enr_dw.head(10).Term.apply(parse_ontology_id_from_keys)\n",
+    "    pw_id[0]\n",
+    "    for pw_id in enr_dw.head(10).Term.apply(parse_ontology_id_from_enrichr_results)\n",
     "]\n",
     "\n",
     "# get pathway records\n",
     "enr_up_top10_pathways = lb.Pathway.from_values(enr_up_top10, lb.Pathway.ontology_id)\n",
     "enr_dw_top10_pathways = lb.Pathway.from_values(enr_dw_top10, lb.Pathway.ontology_id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link feature sets to file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.features.add_feature_set(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
-    "file.features.add_feature_set(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
    ]
   },
   {
@@ -458,6 +457,15 @@
    "metadata": {},
    "source": [
     "## Querying metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.describe()"
    ]
   },
   {
@@ -603,17 +611,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_genes = set(pathway.genes.list(\"symbol\"))\n",
-    "degs_genes = set(degs.genes.list(\"symbol\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathway_genes.intersection(degs_genes)"
+    "contributing_genes = pathway.genes.all() & degs.genes.all()\n",
+    "contributing_genes.list(\"symbol\")"
    ]
   },
   {
